--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -261,6 +261,45 @@ a.sidebar-link:hover
     margin-right: 0.3em;
 }
 
+.fc-toolbar-chunk button
+{
+    background: #38ada9 !important;
+    border-color: #38ada9 !important;
+    transition: 0.3s;
+}
+
+.fc-toolbar-chunk button:hover
+{
+    background: #079992 !important;
+    border-color: #079992 !important;
+}
+
+.dt-paging-button.active > *
+{ 
+    background: #38ada9 !important;
+    border-color: #38ada9 !important;
+}
+
+.dt-paging-button:not(.active) > a
+{ 
+    color: #38ada9 !important;
+}
+
+.dt-button.buttons-html5,
+.dt-button.buttons-page-length
+{
+    background: #f1f2f6 !important;
+    border-color: #f1f2f6 !important;
+    transition: 0.3s;
+}
+
+.dt-button.buttons-html5:hover,
+.dt-button.buttons-page-length:hover
+{
+    background: #dfe4ea !important;
+    border-color: #dfe4ea !important;
+}
+
 @media only screen and (max-width: 768px)
 {    
     body
@@ -302,6 +341,18 @@ a.sidebar-link:hover
     {
         margin-top: 1em;
     }
+    
+    .fc-toolbar
+    {
+        display: block !important;
+        text-align: center;
+    }
+    
+    .fc-toolbar .fc-toolbar-chunk
+    {
+        margin-top: 1em;
+        margin-bottom:  1em;
+    }
 }
 
 @media only screen and (max-width: 1266px)
@@ -316,3 +367,25 @@ a.sidebar-link:hover
         display: block;
     }
 }
+
+
+@media only screen and (max-width: 1450px)
+{
+    .fc-toolbar
+    {
+        display: block !important;
+        text-align: center;
+    }
+    
+    .fc-toolbar .fc-toolbar-chunk
+    {
+        margin: 0.5em;
+        display: inline-block;
+    }
+    
+    .fc-toolbar .fc-toolbar-chunk:first-child
+    {
+        display: block;
+    }
+}
+
