--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -305,6 +305,11 @@ a.sidebar-link:hover
     width: 100%;
 }
 
+.sgapp-avatar
+{
+    width: 3em;
+}
+
 @media only screen and (max-width: 768px)
 {    
     body
