--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -363,6 +363,11 @@ a.sidebar-link:hover
         margin-top: 1em;
         margin-bottom:  1em;
     }
+    
+    footer *
+    {
+        font-size: xx-small;
+    }
 }
 
 @media only screen and (max-width: 1266px)
