--- a/css/dashboard_2.css
+++ b/css/dashboard_2.css
@@ -1,13 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-:root
-{
-  --primaryColor: #2583a7;
-  --primaryTextColor: #fff;
-  --primaryColorAlt: #bfe0e9;
-  --sidePaneSelection: #374550;
-}
-
 .poppins-thin {
     font-family: "Poppins", sans-serif;
     font-weight: 100;
@@ -238,34 +230,10 @@ a.sidebar-brand
     background: #fff;
 }
 
-.sidebar-item.active
+a.sidebar-link:hover
 {
-    background: none;
-    border: none;
-    transition: none;
-}
-
-.sidebar-item.active .sidebar-link,
-.sidebar-item.active .sidebar-link:hover
-{
-    background: var(--sidePaneSelection);
-    border: 3px solid transparent;
-    padding: 0.25em 1em;
-    margin-left: 1em;
-    margin-right: 1em;
-    border-radius: 0.5em;
-}
-
-.sidebar-item.active .sidebar-link svg,
-a.sidebar-link:hover svg
-{
-    stroke: var(--primaryTextColor) !important;
-}
-
-.sidebar-item.active .sidebar-link span,
-a.sidebar-link:hover span
-{
-    color: var(--primaryTextColor) !important;
+    background: linear-gradient(90deg,rgba(59,125,221,.1),rgba(59,125,221,.088) 50%,transparent);
+    border-left-color: #3b7ddd;
 }
 
 #sidebar *
@@ -347,26 +315,69 @@ a.sidebar-link:hover span
     margin-right: 0.3em;
 }
 
+.fc-toolbar-chunk button
+{
+    background: #38ada9 !important;
+    border-color: #38ada9 !important;
+    transition: 0.3s;
+}
+
+.fc-toolbar-chunk .active
+{
+    background: #01a3a4 !important;
+    border-color: #10ac84 !important;
+}
+
+.fc-toolbar-chunk button:hover
+{
+    background: #079992 !important;
+    border-color: #079992 !important;
+}
+
 .fc-button
 {
-    background: none;
-    border: none;
-    box-shadow: none;
-    font-weight: 500;
+    background: #38ada9 !important;
+    border-color: #38ada9 !important;
+    color: #fff;
+    transition: 0.3s;
 }
 
-.fc-button.fc-state-active
+.fc-button .active
 {
-    background: var(--primaryColorAlt);
-    color: var(--primaryColor);
-    border-radius: 0.25em;
+    background: #01a3a4 !important;
+    border-color: #10ac84 !important;
 }
 
-.fc-addEventButton-button
+.fc-button:hover
 {
-    background: var(--primaryColor);
-    color: var(--primaryTextColor);
-    font-weight: normal;
+    background: #079992 !important;
+    border-color: #079992 !important;
+}
+
+.dt-paging-button.active > *
+{ 
+    background: #38ada9 !important;
+    border-color: #38ada9 !important;
+}
+
+.dt-paging-button:not(.active) > a
+{ 
+    color: #38ada9 !important;
+}
+
+.dt-button.buttons-html5,
+.dt-button.buttons-page-length
+{
+    background: #f1f2f6 !important;
+    border-color: #f1f2f6 !important;
+    transition: 0.3s;
+}
+
+.dt-button.buttons-html5:hover,
+.dt-button.buttons-page-length:hover
+{
+    background: #dfe4ea !important;
+    border-color: #dfe4ea !important;
 }
 
 .sgapp-select2-full
@@ -394,33 +405,6 @@ a.sidebar-link:hover span
     position: absolute;
     right: 0;
     top: -0.2em;
-}
-
-.btn-info,
-.btn-success,
-.dt-paging-button.page-item.active a
-{
-    background: var(--primaryColor) !important;
-    color: var(--primaryTextColor) !important;
-}
-
-#nav-calendar
-{
-    padding: 1em;
-}
-
-.select2
-{
-    max-height: 2.5em;
-    overflow: hidden;
-    border: 1px solid lightgray;
-    border-radius: 0.25em;
-}
-
-.select2-selection.select2-selection--single
-{
-    padding: 0.2em;
-    border: none;
 }
 
 @media only screen and (max-width: 768px)
@@ -502,7 +486,7 @@ a.sidebar-link:hover span
     }
     
     .fc-toolbar .fc-center .fc-button-group,
-    .fc-toolbar .fc-right
+    .fc-toolbar .fc-right .fc-button-group
     {
         position: absolute;
         left: 50%;
@@ -512,35 +496,18 @@ a.sidebar-link:hover span
     .fc-toolbar .fc-center .fc-button-group
     {
         width: 12em;
-        margin-top: 3em !important;
+        margin-top: 1em;
     }
     
-    .fc-toolbar .fc-right
+    .fc-toolbar .fc-right .fc-button-group
     {
-        width: 15em;
-        margin-top: 6em !important;
+        width: 16em;
+        margin-top: 6em;
     }
     
-    .fc-toolbar .fc-left select
+    .fc-view-container
     {
-        position: absolute;
-        left: 50%;
-        transform: translate(-50%, 0);
-    }
-    
-    .fc-toolbar .fc-left
-    {
-        position: relative;
-    }
-    
-    .fc-view-container 
-    {
-        margin-top: 10em !important;
-    }
-    
-    #nav-calendar .fc-right .fc-button-group
-    {
-        margin-top: 2em;
+        margin-top: 7em;
     }
     
     #main-search 
@@ -576,21 +543,6 @@ a.sidebar-link:hover span
     .fc-toolbar .fc-center 
     {
         float: left;
-    }
-    
-    .fc-view-container 
-    {
-        margin-top: 1em;
-    }
-    
-    .fc-toolbar .fc-center .fc-button-group
-    {
-        margin-top: 1em;
-    }
-    
-    .fc-toolbar .fc-right
-    {
-        margin-top: 1em;
     }
 }
 
