--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -6,6 +6,13 @@
   --primaryTextColor: #fff;
   --primaryColorAlt: #bfe0e9;
   --sidePaneSelection: #374550;
+  
+  --darkBackgroundColor: #27374D;
+  --darkBackgroundColorAlt: #222831;
+  --darkPrimaryColor: #526D82;
+  --darkPrimaryColorAlt: #76ABAE;
+  --darkAccentColor: #9DB2BF;
+  --darkTextColor: #DDE6ED;
 }
 
 .poppins-thin {
@@ -334,11 +341,6 @@ a.sidebar-link:hover span
     width: 100%;
 }
 
-.fc-button
-{
-    /*display: none;*/
-}
-
 .sgapp-button-icon
 {
     width: 1em;
@@ -461,6 +463,12 @@ a.sidebar-link:hover span
 {
     background: #dfe4ea !important;
     border-color: #dfe4ea !important;
+}
+
+#sgapp-toc-header
+{
+    height: 3.5em;
+    width: auto;
 }
 
 @media only screen and (max-width: 768px)
@@ -678,4 +686,70 @@ a.sidebar-link:hover span
     .dt-column-order {
         visibility: hidden;
     }
+}
+
+
+/* Dark mode */
+body[data-theme="dark"] .navbar-light,
+body[data-theme="dark"] ul.sidebar-nav,
+body[data-theme="dark"] a.sidebar-link,
+body[data-theme="dark"] a.sidebar-brand,
+body[data-theme="dark"] footer
+{
+    background: var(--darkBackgroundColorAlt) !important;
+}
+
+body[data-theme="dark"] .text-dark,
+body[data-theme="dark"] h1,
+body[data-theme="dark"] svg
+{
+    color: var(--darkTextColor) !important;
+    stroke: var(--darkTextColor) !important;
+}
+
+body[data-theme="dark"] .navbar-light,
+body[data-theme="dark"] ul.sidebar-nav,
+body[data-theme="dark"] a.sidebar-link,
+body[data-theme="dark"] a.sidebar-brand,
+body[data-theme="dark"] .sidebar-header,
+body[data-theme="dark"] a.sidebar-link span,
+body[data-theme="dark"] #sgapp-main-calendar .fc-header-toolbar h2,
+body[data-theme="dark"] .fc-button,
+body[data-theme="dark"] #sgapp-main-calendar
+{
+    color: var(--darkTextColor) !important;
+}
+
+body[data-theme="dark"] .sidebar-item.active .sidebar-link,
+body[data-theme="dark"] .sidebar-link:hover
+{
+    background: var(--darkPrimaryColorAlt) !important;
+}
+
+body[data-theme="dark"] #sgapp-main
+{
+    background: var(--darkBackgroundColor);
+}
+
+body[data-theme="dark"] #sgapp-main-calendar .fc-header-toolbar,
+body[data-theme="dark"] #sgapp-main-calendar .fc-view-container
+{
+    background: var(--darkBackgroundColorAlt) !important;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.01), 0 6px 20px 0 rgba(0, 0, 0, 0.02);
+}
+
+body[data-theme="dark"] .fc-button
+{
+    font-weight: lighter;
+}
+
+body[data-theme="dark"] .fc-button.fc-state-active
+{
+    background: var(--darkPrimaryColor);
+    color: var(--darkTextColor);
+}
+
+body[data-theme="dark"] .fc-state-highlight
+{
+    color: var(--darkBackgroundColorAlt);
 }
