Data table will now export all the columns except for the action column

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -612,6 +612,11 @@ a.sidebar-link:hover svg
     font-size: 0.5em !important;
 }
 
+.note-editor.panel
+{
+    background-color: #fff;
+}
+
 .note-editable 
 {
     margin-bottom: 20px;
